fix numbering z-index, add hover effect

--- a/style.css
+++ b/style.css
@@ -104,10 +104,12 @@ article > section {
 article > section h2 {
 	margin: 0;
 	border-bottom: var(--border-width) solid var(--border);
+	cursor: default;
 }
 
 article > section h2:before {
 	display: inline-block;
+	position: relative;
 
 	content: counter(heading);
 	counter-increment: heading;
@@ -121,8 +123,14 @@ article > section h2:before {
 
 	opacity: 0.5;
 
-	z-index: 1;
+	z-index: -1;
 	/* you can look again now, rich */
+
+	transition: opacity 0.5s ease-in-out;
+}
+
+article section h2:hover:before {
+	opacity: 1;
 }
 
 /* odd sections */
